solved several intellij inspections